# discord-level-bot

./: .env.example  Cargo.toml  Config.toml.example  LICENSE  README.md
migrations/: 20240327005851_create_users_table.sql
src/: leveling.rs  main.rs
src/commands/: leaderboard.rs  level.rs  mod.rs
