[package]
name = "henryk-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = [ "rt-multi-thread", "macros" ] }
serenity = { version = "0.12", features = ["client", "gateway", "rustls_backend"] }
poise = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "3.7", features = ["chrono_0_4"] }
toml = "0.8"
anyhow = "1.0"
chrono = "0.4"
dotenvy_macro = "0.15"
redis = { version = "0.25", features = ["aio", "tokio-comp"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres"] }
